schema/testdata/validation_create_missing_identity_nested/schema.keel
model Profile {
    fields {
        name Text
        identity Identity
    }
}

model Post {
    fields {
        body Text
        profile Profile
    }

    operations {
        create createPost() with (body, profile.name)
    }
}

model Comment {
    fields {
        post Post
    }

    operations {
        create createComment() with (post.body, post.profile.name)
    }
}
